--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -10,7 +10,14 @@ body {
 }
 a {
   text-decoration: none;
+  color: inherit;
 }
 .hidden {
   display: hidden;
+}
+.flex-column-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
