todo function created

--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -154,4 +154,11 @@ a {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.flex-row-center {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }/*# sourceMappingURL=main.css.map */
