--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -18,3 +18,9 @@ a {
   justify-content: center;
   align-items: center;
 }
+.flex-row-center {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
