--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -141,11 +141,18 @@ table {
 
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-color: skyblue;
+  background-color: #0066cc;
+  color: #ffcc00;
 }
 
 a {
   text-decoration: none;
+  color: inherit;
+}
+
+a:hover,
+a:active,
+a:focus {
   color: inherit;
 }
 
