--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -1,15 +1,21 @@
 @import "./reset.scss";
-
+@import "./variables.scss";
 * {
   box-sizing: border-box;
 }
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-color: skyblue;
+  background-color: $background-color;
+  color: $font-color;
 }
 a {
   text-decoration: none;
+  color: inherit;
+}
+a:hover,
+a:active,
+a:focus {
   color: inherit;
 }
 .flex-column-center {
